--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,23 +13,23 @@
     </div>
     <div class="container">
         <div class="box">
-            <label for="ciphertext">密文</label>
-            <textarea id="ciphertext" placeholder="在此输入密文"></textarea>
+            <label for="ciphertext">Ciphertext</label>
+            <textarea id="ciphertext" placeholder="Enter ciphertext here"></textarea>
         </div>
         <div class="buttons">
-            <button id="encrypt">加密</button>
-            <button id="decrypt">解密</button>
-            <button id="clear" onclick="clean();">清空</button>
+            <button id="encrypt">Encrypt</button>
+            <button id="decrypt">Decrypt</button>
+            <button id="clear" onclick="clean();">Clear</button>
         </div>
         <div class="box">
-            <label for="plaintext">明文</label>
-            <textarea id="plaintext" placeholder="在此输入明文"></textarea>
+            <label for="plaintext">Plaintext</label>
+            <textarea id="plaintext" placeholder="Enter plaintext here"></textarea>
         </div>
         <div class="box box2">
             <form id="uploadForm" enctype="multipart/form-data">
-                <label for="file">点我上传文件</label>
+                <label for="file">Click to upload file</label>
                 <input type="file" name="file" id="file" required>
-                <button type="submit">开始处理</button>
+                <button type="submit">Start Processing</button>
             </form>
         </div>
     </div>
