--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Phi-Decoder</h1>
+        <h1>PhiCrypto</h1>
     </div>
     <div class="container">
         <div class="box">
