--- a/public/password.html
+++ b/public/password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>密码验证</title>
+    <title>Password</title>
     <style>
         body {
             display: flex;
@@ -50,12 +50,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>请输入密码</h1>
+        <h1>Enter the Password</h1>
         <form id="passwordForm">
-            <input type="password" name="password" id="password" placeholder="密码" required>
-            <button type="submit">提交</button>
+            <input type="password" name="password" id="password" placeholder="Password" required>
+            <button type="submit">Submit</button>
         </form>
-        <div class="error" id="error">密码错误</div>
+        <div class="error" id="error">Error</div>
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
