--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <div class="header">
         <h1>PhiCrypto</h1>
         <h5 style="opacity: 0.6;">This site is used to decrypt Phigros archive files, the uploaded file can automatically identify whether it is an encrypted archive, and the uploaded file should be an xml archive file</h5>
+        <h5 style="opacity: 0.6;">Click the Textaera title to copy</h5>
     </div>
     <div class="container">
         <div class="box">
@@ -30,7 +31,7 @@
             <form id="uploadForm" enctype="multipart/form-data">
                 <label for="file">Click to upload file</label>
                 <input type="file" name="file" id="file" required>
-                <button type="submit">Start Processing</button>
+                <button type="submit">Processing</button>
             </form>
         </div>
     </div>
